--- a/categories.html
+++ b/categories.html
@@ -6,17 +6,16 @@ group: navigation
 ---
 {% include JB/setup %}
 
-<ul class="tag_box inline">
+<ul class="gk-tagbox">
   {% assign categories_list = site.categories %}
   {% include JB/categories_list %}
 </ul>
 
 
-{% for category in site.categories %} 
+{% for category in site.categories %}
   <h2 id="{{ category[0] }}-ref">{{ category[0] | join: "/" }}</h2>
   <ul>
-    {% assign pages_list = category[1] %}  
+    {% assign pages_list = category[1] %}
     {% include JB/pages_list %}
   </ul>
 {% endfor %}
-
